# QuantKubera

./: .gitignore  LICENSE  PHASE2A_NOTES.md  README.md  options_universe.csv  tokens.txt
artifacts/kitesim/binance_test/: report.json
artifacts/kitesim/binance_test_v2/: pnl.json  report.json
artifacts/kitesim/zerodha_day1/: fills.jsonl  report.json
configs/: aeon.toml  backtest.toml  live.toml  paper.toml  paper_crypto.toml  paper_options.toml
contracts/: executor_abi_v1.md  no_leakage.md
crates/kubera-backtest/src/: lib.rs  main.rs
crates/kubera-connectors/scripts/: zerodha_options_universe.py  zerodha_ticker_stream.py
crates/kubera-connectors/src/: lib.rs  zerodha.rs
crates/kubera-core/: Cargo.toml
crates/kubera-core/src/: hydra.rs  lib.rs  lob.rs  observability.rs  oras.rs  parquet_export.rs  rmt.rs  strategy.rs
crates/kubera-executor-cpp/src/: kubera_executor.cpp
crates/kubera-models/: Cargo.toml
crates/kubera-models/src/: depth.rs  greeks.rs  lib.rs
crates/kubera-options/: Cargo.toml
crates/kubera-options/src/: analytics.rs  contract.rs  depth5.rs  execution.rs  export.rs  greeks.rs  kitesim.rs  ledger.rs  lib.rs  pricing.rs  replay.rs  report.rs  specs.rs  validation_strategies.rs  venue.rs
crates/kubera-risk/benches/: bench_risk.rs
crates/kubera-risk/src/: lib.rs
crates/kubera-runner/: Cargo.toml  output.txt
crates/kubera-runner/src/: binance_capture.rs  binance_depth_capture.rs  binance_exchange_info.rs  binance_sbe_depth_capture.rs  circuit_breakers.rs  kitesim_backtest.rs  main.rs  order_io.rs  zerodha_capture.rs
crates/kubera-runner/tests/: integration_test.rs
data/orders/binance_smoke/: orders.json  test_intents.json
data/orders/manual_smoke/: orders.json
docs/: AEON_walkthrough.md  BINANCE_SPOT_STATUS.md  PATCHES.md  README.md  ZERODHA_NSE_OPTIONS_TODO.md  zerodha_specs.txt
docs/notes/: MasterPrompt.txt
infra/observability/: docker-compose.yml
infra/observability/prometheus/: prometheus_alerts.yaml
patches/QuantKubera-main/configs/: backtest.toml  paper.toml  paper_crypto.toml
patches/QuantKubera-main/crates/kubera-backtest/: Cargo.toml
patches/QuantKubera-main/crates/kubera-backtest/src/: optimize.rs
patches/QuantKubera-main/crates/kubera-core/: Cargo.toml
patches/QuantKubera-main/crates/kubera-core/benches/: benchmark_core.rs
patches/QuantKubera-main/crates/kubera-core/src/: hydra.rs  metrics.rs  mode.rs  portfolio.rs
patches/QuantKubera-main/crates/kubera-core/src/aeon/: strategy.rs
patches/QuantKubera-main/crates/kubera-data/: Cargo.toml
patches/QuantKubera-main/crates/kubera-data/src/: lib.rs
patches/QuantKubera-main/crates/kubera-executor/: Cargo.toml
patches/QuantKubera-main/crates/kubera-executor/src/: lib.rs
patches/QuantKubera-main/docs/: oras_runbook.md
patches/fillconfirm-options-patch/QuantKubera-fillconfirm-patch/: README_PATCH.txt
patches/rmt-rankspace-patch/QuantKubera-main/crates/kubera-connectors/: Cargo.toml
patches/rmt-rankspace-patch/QuantKubera-main/crates/kubera-connectors/src/: execution.rs  rest_client.rs
patches/rmt-rankspace-patch/QuantKubera-main/crates/kubera-executor-cpp/: CMakeLists.txt
patches/rmt-rankspace-patch/QuantKubera-main/crates/kubera-mlflow/: Cargo.toml
patches/rmt-rankspace-patch/QuantKubera-main/crates/kubera-risk/: Cargo.toml
patches/strategy-rd-patch/QuantKubera-main/: Cargo.toml  Dockerfile  paper.toml
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-executor/: Cargo.toml
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-executor/benches/: benchmark_executor.rs
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-executor/src/: lib.rs
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-runner/: Cargo.toml
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-runner/src/: main.rs  vpin_strategy.rs  web_server.rs
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-runner/tests/: backtest_hydra.rs  backtest_hydra_wal.rs  backtest_oras.rs  backtest_oras_wal.rs  integration_test.rs
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-sbe/: Cargo.toml
patches/strategy-rd-patch/QuantKubera-main/crates/kubera-sbe/src/: lib.rs
patches/universe-wal-patch/QuantKubera-main/: .gitignore  Cargo.toml
patches/universe-wal-patch/QuantKubera-main/crates/kubera-connectors/examples/: test_sbe.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-connectors/scripts/: zerodha_auth.py  zerodha_build_universe_json.py  zerodha_options_quotes.py
patches/universe-wal-patch/QuantKubera-main/crates/kubera-connectors/src/: coindcx.rs  lib.rs  zerodha.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-core/src/: lib.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-data/src/: parquet_exporter.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-executor/benches/: benchmark_executor.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-options/src/: backtest.rs  greeks.rs  nse_specs.rs  signals.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-runner/src/: web_server.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-runner/tests/: backtest_hydra.rs  backtest_hydra_wal.rs  backtest_oras.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-sbe/benches/: decode_bench.rs
patches/universe-wal-patch/QuantKubera-main/crates/kubera-strategy-host/: Cargo.toml
patches/universe-wal-patch/QuantKubera-main/docs/notes/: hydra_specs.txt
patches/universe-wal-patch/QuantKubera-main/infra/observability/: README.md
patches/universe-wal-patch/QuantKubera-main/python/: load_aeon_data.py  visualize_aeon.py
patches/universe-wal-patch/QuantKubera-main/python/strategies/: momentum.py
patches/universe-wal-patch/QuantKubera-main/research/indicators/timothy_masters/: COMP_VAR.CPP  FUNCDEFS.H
patches/universe-wal-patch/QuantKubera-main/ui/: package-lock.json
patches/universe-wal-patch/QuantKubera-main/ui/src/: index.css
python/: README_vectorbtpro_harness.md  aeon_equity.parquet  vbt_hydra_klines_harness.py
tools/: patch_quotes_qty.py
(+67 files in other folders)
