[workspace]
members = [
    "crates/kubera-core",
    "crates/kubera-models",
    "crates/kubera-risk",
    "crates/kubera-executor",
    "crates/kubera-data",
    "crates/kubera-runner",
    "crates/kubera-backtest", "crates/kubera-sbe", "crates/kubera-connectors", "crates/kubera-options", "crates/kubera-strategy-host", "crates/kubera-mlflow", "crates/kubera-ffi",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
url = "2.4"
dotenv = "0.15"
byteorder = "1.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum = "0.7"
opentelemetry = { version = "0.21" }
tracing-opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2" }
tower-http = { version = "0.5", features = ["cors", "fs"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
