[package]
name = "kubera-data"
version = "0.1.0"
edition = "2024"

[dependencies]
kubera-models = { path = "../kubera-models" }
kubera-core = { path = "../kubera-core" }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
ordered-float = "4.2"
parquet = "53.0"
arrow = "53.0"


