[package]
name = "kubera-mlflow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
